some debugging and made it acutally work

--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,11 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# database stuff
+*.sqlite3
+*.db
+*.sqlite3-shm
+*.sqlite3-wal
+*.toml
+migrations/
